--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/react-redux": "^7.1.24",
     "axios": "^1.6.0",
-    "jwt-decode": "^4.0.0",
+    "formik": "^2.4.5",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
