--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.19.4",
-    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "*",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -32,6 +32,7 @@
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "6.1.2",
     "react-native-paper": "^4.7.2",
     "react-native-permissions": "^3.10.1",
